Add Terms of Service

--- a/login.html
+++ b/login.html
@@ -115,6 +115,9 @@
   	<!-- Back to home button inside second column -->
 	<div class="back-home-wrap">
   	<a class="btn btn-pill btn-dark" href="index.html" aria-label="Back to home">BACK TO HOME</a>
+<a class="btn btn-pill btn-dark" href="privacy.html" aria-label="Privacy Policy">PRIVACY POLICY</a>
+<a class="btn btn-pill btn-dark" href="data-deletion.html" aria-label="User Data Deletion">USER DATA DETAILS</a>
+<a class="btn btn-pill btn-dark" href="terms.html" aria-label="Terms of Service">TERMS OF SERVICE</a>
      </div>
     </div>
    </div>
@@ -123,7 +126,7 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container">
-      <p>© <span id="y"></span>, YOGA WITH LISA BY LISA ESHUN-WILSON &amp; ASSOCIATES, LLC / <a href=privacy.html>ALL RIGHTS RESERVED</a></p>
+      <p>© <span id="y"></span>, YOGA WITH LISA BY LISA ESHUN-WILSON &amp; ASSOCIATES, LLC / ALL RIGHTS RESERVED</p>
     </div>
   </footer>
 
