--- a/login.html
+++ b/login.html
@@ -112,13 +112,14 @@
             <h3>Questions?</h3>
             <p>Email us at <a href="mailto:lisa@yogawithlisa.ai">lisa@yogawithlisa.ai</a> today.</p>
           </aside>
-  	<!-- Back to home button inside second column -->
-	<div class="back-home-wrap">
-  	<a class="btn btn-pill btn-dark" href="index.html" aria-label="Back to home">BACK TO HOME</a>
-<a class="btn btn-pill btn-dark" href="privacy.html" aria-label="Privacy Policy">PRIVACY POLICY</a>
-<a class="btn btn-pill btn-dark" href="data-deletion.html" aria-label="User Data Deletion">USER DATA DETAILS</a>
-<a class="btn btn-pill btn-dark" href="terms.html" aria-label="Terms of Service">TERMS OF SERVICE</a>
-     </div>
+<div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 10px; margin-top: 40px;">
+  <a href="index.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">Back to Home</a>
+  <a href="privacy.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">Privacy Policy</a>
+  <a href="data.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">User Data Details</a>
+  <a href="terms.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">Terms of Service</a>
+</div>     
+
+</div>
     </div>
    </div>
  </section>
