Update login page titles

--- a/terms.html
+++ b/terms.html
@@ -40,7 +40,7 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Meet me on the <em>mat</em>.</span><br/>
+  	<span class="nowrap">The Ground Rules</span><br/>
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
