--- a/login.html
+++ b/login.html
@@ -115,7 +115,7 @@
 <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 10px; margin-top: 40px;">
   <a href="index.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">Back to Home</a>
   <a href="privacy.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">Privacy Policy</a>
-  <a href="data.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">User Data Details</a>
+  <a href="data-deletion.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">User Data Details</a>
   <a href="terms.html" style="background:#000; color:#fff; padding:10px 18px; border-radius:20px; text-decoration:none; font-size:14px;">Terms of Service</a>
 </div>     
 
