--- a/terms.html
+++ b/terms.html
@@ -40,7 +40,7 @@
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">The Ground Rules</span><br/>
+  	<span class="nowrap">A few rules to keep us grounded.</span><br/>
       </h1>
   <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
