Founder Page Update 4

--- a/founder.html
+++ b/founder.html
@@ -34,13 +34,13 @@
 
   <!-- Hero (image) -->
   <section class="hero hero--image" role="banner" aria-label="Hero">
-    <!-- Set your image at images/founder.jpg -->
-    <div class="hero-media" style="background-image:url('images/founder.jpg');" aria-hidden="true"></div>
+    <!-- Set your image at images/founder-page.jpg -->
+    <div class="hero-media" style="background-image:url('images/founder-page.jpg');" aria-hidden="true"></div>
     <div class="hero-overlay" aria-hidden="true"></div>
 
     <div class="hero-inner">
       <h1 class="display">
-  	<span class="nowrap">Hi!<em>I'm Lisa.</em></span><br/>
+  	<span class="nowrap">Hi! <em>I'm Lisa.</em></span><br/>
   	A <em>biochemist and yogi</em> in one.  
       </h1>
   <div class="hero-ctas">
@@ -57,33 +57,34 @@
   <!-- Minimal Intro -->
   <section class="intro container">
     <h2>Let's flow.</h2>
-    <p>
+    <p style="margin-bottom: 1.5em; line-height: 1.6;">
     Hi I'm Lisa! A certified yoga teacher from Los Angeles, CA. Yoga with Lisa is a digital wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
 
-<p>
+<p style="margin-bottom: 1.5em; line-height: 1.6;">
 After years of decoding the mysteries of <a href=http://www.lisaeshunwilson.com>proteins in the lab</a>, I’ve taken a new kind of deep dive — one of breath, body, and spirit. My name is Lisa Eshun-Wilson and I am a <em>certified yoga instructor (E-RYS 200)</em> thanks to the very talented <a href=https://www.petegyoga.com/> Pete Guinosso (E-RYS500),</a> creator of the Lighting the Path 200-Hour Training Program at <a href=https://www.mygreenyogi.com/>Green Yogi</a> in Berkeley, CA.</p> 
 
-<p>
+<p style="margin-bottom: 1.5em; line-height: 1.6;">
 My practice draws on the grounding discipline of Ashtanga from Mysore, India, the dynamic rhythm of Vinyasa, and the introspective softness of Yin, which draws inspiration from Taoist traditions and was formalized in more recent years by teachers integrating Indian Hatha yoga with Chinese medicine principles.</p>
 
-<p>
+<p style="margin-bottom: 1.5em; line-height: 1.6;">
 Each of these traditions brings something powerful — structure, energy, stillness — and my classes aim to blend them in a way that’s both playful and empowering.</p>
 
-<p>
+<p style="margin-bottom: 1.5em; line-height: 1.6;">
 Born in Norway to parents from the Czech Republic and Ghana and raised in Los Angeles,CA, I’ve always existed at the intersection of different cultures and identities. As a Black woman navigating academia, industry, and now the wellness world, cultural humility, restorative justice, and inclusivity aren’t just buzzwords — they’re practices I hold near and dear to my heart.<p>
 
-<p>When you come to my class, I want you to feel seen, heard and free</p>.
+<p style="margin-bottom: 1.5em; line-height: 1.6;">When you come to my class, I want you to feel seen, heard and free</p>.
 
-<p>I like to start from the simplicity of Tadasana, or Mountain Pose, and guide you through expressive, full-body movements — all while syncing breath to flow.</p> 
+<p style="margin-bottom: 1.5em; line-height: 1.6;">I like to start from the simplicity of Tadasana, or Mountain Pose, and guide you through expressive, full-body movements — all while syncing breath to flow.</p> 
 
-<p>
+<p style="margin-bottom: 1.5em; line-height: 1.6;">
 I bring a background in biochemistry (PhD, UC Berkeley, 2019) and pair it with a growing mastery of anatomy and holistic wellness, creating a class that feels rooted in both knowledge, or Jnana, and care, or Bhakti.</p>
 
-<p>
+<p style="margin-bottom: 1.5em; line-height: 1.6;">
 Whether you're new to yoga or looking to deepen your practice, I hope you’ll find something here: a moment of breath, meditation, and a deeper connection to your body. My goal is to offer more than movement & meditation: I want to offer a sacred space for healing, laughter, and community.</p>
 
-<p>Sincerely, Lisa the Yogi</p>
+<p style="margin-bottom: 1.5em; line-height: 1.6;">Sincerely, Lisa the Yogi</p>
+
   </section>
 
 <!-- Sticky taupe nav on scroll (diagnostic version) -->
@@ -214,7 +215,11 @@ Whether you're new to yoga or looking to deepen your practice, I hope you’ll f
 
     <div class="ig-track" id="igTrack">
       <!-- Replace these image paths with your own (local images or CDN) -->
-      <a class="ig-card" href="#" aria-label="Instagram post 1">
+	<a class="ig-card" href="#" aria-label="Instagram post 0">
+        <img src="images/ig/ig9.jpg" alt="Yoga with Lisa — post 0" />
+      </a>      
+
+	<a class="ig-card" href="#" aria-label="Instagram post 1">
         <img src="images/ig/ig10.jpg" alt="Yoga with Lisa — post 1" />
       </a>
       <a class="ig-card" href="#" aria-label="Instagram post 2">
