Founder Page Update 6

--- a/founder.html
+++ b/founder.html
@@ -73,9 +73,7 @@ Each of these traditions brings something powerful — structure, energy, stilln
 <p style="margin-bottom: 1.5em; line-height: 1.6;">
 Born in Norway to parents from the Czech Republic and Ghana and raised in Los Angeles,CA, I’ve always existed at the intersection of different cultures and identities. As a Black woman navigating academia, industry, and now the wellness world, cultural humility, restorative justice, and inclusivity aren’t just buzzwords — they’re practices I hold near and dear to my heart.<p>
 
-<p style="margin-bottom: 1.5em; line-height: 1.6;">When you come to my class, I want you to feel seen, heard and free</p>.
-
-<p style="margin-bottom: 1.5em; line-height: 1.6;">I like to start from the simplicity of Tadasana, or Mountain Pose, and guide you through expressive, full-body movements — all while syncing breath to flow.</p> 
+<p style="margin-bottom: 1.5em; line-height: 1.6;">When you come to my class, I want you to feel seen, heard and free. I like to start from the simplicity of Tadasana, or Mountain Pose, and guide you through expressive, full-body movements — all while syncing breath to flow.</p> 
 
 <p style="margin-bottom: 1.5em; line-height: 1.6;">
 I bring a background in biochemistry (PhD, UC Berkeley, 2019) and pair it with a growing mastery of anatomy and holistic wellness, creating a class that feels rooted in both knowledge, or Jnana, and care, or Bhakti.</p>
