Founder Page Update 7

--- a/founder.html
+++ b/founder.html
@@ -57,7 +57,7 @@
   <!-- Minimal Intro -->
   <section class="intro container">
     <h2>Let's flow.</h2>
-    <p style="margin-bottom: 1.5em; line-height: 1.6;">
+    <p style="margin-bottom: 1.5em; line-height: 1.6; text-align: justify;">
     Hi I'm Lisa! A certified yoga teacher from Los Angeles, CA. Yoga with Lisa is a digital wellness platform that features personalized yoga classes, meditations, and nutrition all in one place — adapting to your body, your cycle, and your lifestyle in real time.  
     </p>
 
