Yoga Preview Card

--- a/index.html
+++ b/index.html
@@ -10,13 +10,30 @@
   <!-- Adobe Fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
   <title>Yoga with Lisa</title>
-  <link rel="icon" href="images/favicon.png">
-  <link rel="stylesheet" href="style.css" />
+  
+<!-- Favicon setup -->
+<link rel="icon" href="/images/favicon.png" type="image/png" sizes="32x32">
+<link rel="apple-touch-icon" href="/images/favicon.png">
+<meta name="theme-color" content="#f5ede3">
+  
+<link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <!-- Memberstack webflow package -->
 <script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
 
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Yoga with Lisa 🌿">
+<meta property="og:description" content="Personalized yoga, meditation, and nutrition — flow with Lisa Eshun-Wilson, PhD. Discover a sacred space for balance and renewal.">
+<meta property="og:image" content="https://www.yogawithlisa.ai/images/preview.jpg">
+<meta property="og:url" content="https://www.yogawithlisa.ai">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Yoga with Lisa 🌿">
+<meta name="twitter:description" content="Personalized yoga, meditation, and wellness with Lisa. Move, breathe, and grow with science and spirit.">
+<meta name="twitter:image" content="https://www.yogawithlisa.ai/images/preview.jpg">
 </head>
 
 <body>
