--- a/yoga-ondemand.html
+++ b/yoga-ondemand.html
@@ -10,8 +10,13 @@
   <!-- Adobe Fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
   <title>Yoga with Lisa</title>
-  <link rel="icon" href="images/favicon.png">
-  <link rel="stylesheet" href="style.css" />
+  
+<!-- Favicon setup -->
+<link rel="icon" href="/images/favicon.png" type="image/png" sizes="32x32">
+<link rel="apple-touch-icon" href="/images/favicon.png">
+<meta name="theme-color" content="#f5ede3">
+  
+<link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <!-- Memberstack webflow package -->
