--- a/login.html
+++ b/login.html
@@ -8,8 +8,12 @@
 <!-- Memberstack webflow package -->
 <script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
 
+<!-- Favicon setup -->
+<link rel="icon" href="/images/favicon.png" type="image/png" sizes="32x32">
+<link rel="apple-touch-icon" href="/images/favicon.png">
+<meta name="theme-color" content="#f5ede3">
+  
   <!-- Fonts / CSS (same as index) -->
-  <link rel="icon" href="images/favicon.png">
   <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
