Yoga Preview Cards title change

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
 
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="Lisa Eshun-Wilson">
+<meta property="og:title" content="Yoga with Lisa">
 <meta property="og:description" content="Personalized yoga, meditation, and nutrition meeting you where you are.">
 <meta property="og:image" content="https://www.yogawithlisa.ai/images/preview.jpg">
 <meta property="og:url" content="https://www.yogawithlisa.ai">
