--- a/data-deletion.html
+++ b/data-deletion.html
@@ -23,6 +23,15 @@
 <meta property="og:url" content="https://www.yogawithlisa.ai">
 <meta property="og:type" content="website">
 
+<!-- Favicons -->
+<link rel="icon" href="/favicon.ico" sizes="any"> <!-- classic fallback -->
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#1a1a1a">
+<meta name="theme-color" content="#ffffff">
+
+
 </head>
 
 <body>
