--- a/login.html
+++ b/login.html
@@ -8,10 +8,26 @@
 <!-- Memberstack webflow package -->
 <script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
 
-<!-- Favicon setup -->
-<link rel="icon" href="/images/favicon.png" type="image/png" sizes="32x32">
-<link rel="apple-touch-icon" href="/images/favicon.png">
-<meta name="theme-color" content="#f5ede3">
+<!-- Favicons -->
+<link rel="icon" href="/favicon.ico" sizes="any"> <!-- classic fallback -->
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#1a1a1a">
+<meta name="theme-color" content="#ffffff">
+
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Subscribe Today">
+<meta property="og:description" content="Personalized yoga, meditation, and nutrition meeting you where you are.">
+<meta property="og:image" content="https://www.yogawithlisa.ai/images/preview.jpg">
+<meta property="og:url" content="https://www.yogawithlisa.ai">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Yoga with Lisa 🌿">
+<meta name="twitter:description" content="Personalized yoga, meditation, and wellness with Lisa. Move, breathe, and grow with science and spirit.">
+<meta name="twitter:image" content="https://www.yogawithlisa.ai/images/preview.jpg">
   
   <!-- Fonts / CSS (same as index) -->
   <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
