--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -11,10 +11,13 @@
   <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
   <title>Yoga with Lisa</title>
 
-<!-- Favicon setup -->
-<link rel="icon" href="/images/favicon.png" type="image/png" sizes="32x32">
-<link rel="apple-touch-icon" href="/images/favicon.png">
-<meta name="theme-color" content="#f5ede3">
+<!-- Favicons -->
+<link rel="icon" href="/favicon.ico" sizes="any"> <!-- classic fallback -->
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#1a1a1a">
+<meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
