Yoga In Person Schedule Table

--- a/yoga-inperson-backup.html
+++ b/yoga-inperson-backup.html
@@ -11,26 +11,26 @@
   <link rel="stylesheet" href="https://use.typekit.net/uwl6zhw.css">
   <title>Yoga with Lisa</title>
 
-  <!-- Favicons -->
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-  <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#1a1a1a">
-  <meta name="theme-color" content="#ffffff">
+<!-- Favicons -->
+<link rel="icon" href="/favicon.ico" sizes="any"> <!-- classic fallback -->
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+<link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#1a1a1a">
+<meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1,700&family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,700;1,500;1...amily=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-  <!-- Memberstack webflow package -->
-  <script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
+<!-- Memberstack webflow package -->
+<script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
 
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Class Schedule">
-  <meta property="og:description" content="Personalized yoga, meditation, and nutrition meeting you where you are.">
-  <meta property="og:image" content="https://www.yogawithlisa.ai/images/preview.jpg">
-  <meta property="og:url" content="https://www.yogawithlisa.ai">
-  <meta property="og:type" content="website">
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Class Schedule">
+<meta property="og:description" content="Personalized yoga, meditation, and nutrition meeting you where you are.">
+<meta property="og:image" content="https://www.yogawithlisa.ai/images/preview.jpg">
+<meta property="og:url" content="https://www.yogawithlisa.ai">
+<meta property="og:type" content="website">
 
   <!-- Schedule styles -->
   <style>
@@ -104,11 +104,14 @@
       text-transform: uppercase;
       letter-spacing: 0.1em;
     }
-    .schedule-table tbody tr {
-      border-bottom: 1px solid #eee; /* subtle divider between classes */
+    .schedule-date-row th {
+      padding-top: 1.5rem;
+      font-weight: 600;
+      font-size: 0.95rem;
+      border-bottom: 1px solid #eee;
     }
-    .schedule-date {
-      white-space: nowrap;
+    .schedule-table tbody tr:not(.schedule-date-row) {
+      border-bottom: 1px solid #eee;
     }
     .schedule-time,
     .schedule-duration {
@@ -125,7 +128,6 @@
       border-radius: 999px;
       text-transform: lowercase;
     }
-
     @media (max-width: 768px) {
       .schedule-card {
         padding: 1.75rem 1.25rem;
@@ -139,6 +141,9 @@
       .schedule-table td {
         display: block;
         width: 100%;
+      }
+      .schedule-date-row th {
+        display: block;
       }
       .schedule-table tr {
         border-bottom: 1px solid #eee;
@@ -160,7 +165,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container nav-wrap">
-      <a class="brand" href="index.html">yoga with lisa</a>
+      <a class="brand" href="index.html">yoga with lisa</a>     
       <nav class="main-nav" aria-label="Primary">
         <ul>
           <li><a href="login.html" class="login-btn">LOGIN</a></li>
@@ -177,7 +182,7 @@
 
     <div class="hero-inner">
       <h1 class="display">
-        <span class="nowrap">Meet me on the <em>mat</em>.</span><br/>
+  	    <span class="nowrap">Meet me on the <em>mat</em>.</span><br/>
       </h1>
       <div class="hero-ctas">
         <a class="btn btn-dark btn-pill" href="login.html">START YOUR FREE TRIAL TODAY</a>
@@ -244,7 +249,6 @@
       <table class="schedule-table" aria-label="In-person yoga schedule">
         <thead>
           <tr>
-            <th scope="col">Date</th>
             <th scope="col">Time</th>
             <th scope="col">Duration</th>
             <th scope="col">Class</th>
@@ -255,8 +259,10 @@
         </thead>
         <tbody>
           <!-- Nov 15 -->
-          <tr id="nov15">
-            <td class="schedule-date">Friday, Nov 15th</td>
+          <tr class="schedule-date-row" id="nov15">
+            <th scope="rowgroup" colspan="6">Friday, Nov 15 – Berkeley Ballet Pop-Up</th>
+          </tr>
+          <tr>
             <td class="schedule-time">6:30 PM</td>
             <td class="schedule-duration">75 min</td>
             <td class="schedule-class">Berkeley Ballet – Evening Flow</td>
@@ -272,8 +278,10 @@
           </tr>
 
           <!-- Oct 18 -->
-          <tr id="oct18">
-            <td class="schedule-date">Friday, Oct 18th</td>
+          <tr class="schedule-date-row" id="oct18">
+            <th scope="rowgroup" colspan="6">Friday, Oct 18 – Green Yogi Pop-Up</th>
+          </tr>
+          <tr>
             <td class="schedule-time">6:30 PM</td>
             <td class="schedule-duration">75 min</td>
             <td class="schedule-class">Green Yogi – Center &amp; Flow</td>
@@ -289,8 +297,10 @@
           </tr>
 
           <!-- Sept 19 -->
-          <tr id="sept19">
-            <td class="schedule-date">Thursday, Sept 19th</td>
+          <tr class="schedule-date-row" id="sept19">
+            <th scope="rowgroup" colspan="6">Thursday, Sept 19 – Green Yogi Pop-Up</th>
+          </tr>
+          <tr>
             <td class="schedule-time">6:30 PM</td>
             <td class="schedule-duration">75 min</td>
             <td class="schedule-class">Green Yogi – Sunset Flow</td>
@@ -306,8 +316,10 @@
           </tr>
 
           <!-- Aug 19 -->
-          <tr id="aug19">
-            <td class="schedule-date">Monday, Aug 19th</td>
+          <tr class="schedule-date-row" id="aug19">
+            <th scope="rowgroup" colspan="6">Monday, Aug 19 – Green Yogi Pop-Up</th>
+          </tr>
+          <tr>
             <td class="schedule-time">6:30 PM</td>
             <td class="schedule-duration">75 min</td>
             <td class="schedule-class">Green Yogi – Power &amp; Restore</td>
