Yoga In Person Schedule

--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -232,6 +232,7 @@
           designed to lift your body and your mood. All times are in Pacific Time.
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
+          <a href="#nov15" class="date-pill">Nov 20</a>
           <a href="#nov15" class="date-pill">Nov 15</a>
           <a href="#oct18" class="date-pill">Oct 18</a>
           <a href="#sept19" class="date-pill">Sept 19</a>
@@ -254,14 +255,65 @@
           </tr>
         </thead>
         <tbody>
+          <!-- Dec 20 -->
+          <tr id="dec20">
+            <td class="schedule-date">Saturday, Dec 20th</td>
+            <td class="schedule-time">11:00 AM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa Eshun-Wilson</td>
+            <td class="schedule-location">Green Yogi Berkeley | 2807 Telegraph Ave</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.mygreenyogi.com/telegraph-schedule"
+                 target="_blank" rel="noopener">
+                join us
+              </a>
+            </td>
+          </tr>
+
+	  <!-- Nov 28 -->
+          <tr id="nov28">
+            <td class="schedule-date">Friday, Nov 28th</td>
+            <td class="schedule-time">1:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Beach Glass Hot Yoga & Pilates Noe Valley | 1461 Church St</td>
+            <td class="schedule-location">Beach Gla</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
+                 target="_blank" rel="noopener">
+                join us
+              </a>
+            </td>
+          </tr>
+
+          <!-- Nov 21 -->
+          <tr id="nov21">
+            <td class="schedule-date">Friday, Nov 21st</td>
+            <td class="schedule-time">1:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Vinyasa Flow</td>
+            <td class="schedule-instructor">Lisa Eshun-Wilson</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates Noe Valley | 1461 Church St</td>
+            <td class="schedule-cta">
+              <a class="btn btn-dark btn-pill schedule-btn"
+                 href="https://www.beachglasshyp.com/schedule"
+                 target="_blank" rel="noopener">
+                join us
+              </a>
+            </td>
+          </tr>
+
           <!-- Nov 15 -->
           <tr id="nov15">
             <td class="schedule-date">Friday, Nov 15th</td>
-            <td class="schedule-time">6:30 PM</td>
-            <td class="schedule-duration">75 min</td>
-            <td class="schedule-class">Berkeley Ballet – Evening Flow</td>
-            <td class="schedule-instructor">Lisa Eshun-Wilson</td>
-            <td class="schedule-location">Berkeley Ballet Theater</td>
+            <td class="schedule-time">3:00 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Center & Flow</td>
+            <td class="schedule-instructor">Lisa Eshun-Wilson | Brynn Campbell</td>
+            <td class="schedule-location">Berkeley Ballet Theater | 1370 Tenth Street</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/DHUxfV9lVuVZHBs4idoE"
@@ -274,11 +326,11 @@
           <!-- Oct 18 -->
           <tr id="oct18">
             <td class="schedule-date">Friday, Oct 18th</td>
-            <td class="schedule-time">6:30 PM</td>
-            <td class="schedule-duration">75 min</td>
-            <td class="schedule-class">Green Yogi – Center &amp; Flow</td>
+            <td class="schedule-time">5:30 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Evening Deep Flow</td>
             <td class="schedule-instructor">Lisa Eshun-Wilson</td>
-            <td class="schedule-location">Green Yogi Berkeley</td>
+            <td class="schedule-location">Green Yogi Berkeley | 2807 Telegraph Ave</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?"
@@ -291,11 +343,11 @@
           <!-- Sept 19 -->
           <tr id="sept19">
             <td class="schedule-date">Thursday, Sept 19th</td>
-            <td class="schedule-time">6:30 PM</td>
-            <td class="schedule-duration">75 min</td>
-            <td class="schedule-class">Green Yogi – Sunset Flow</td>
+            <td class="schedule-time">5:30 PM</td>
+            <td class="schedule-duration">60 min</td>
+            <td class="schedule-class">Sunset Flow</td>
             <td class="schedule-instructor">Lisa Eshun-Wilson</td>
-            <td class="schedule-location">Green Yogi Berkeley</td>
+            <td class="schedule-location">Green Yogi Berkeley | 2807 Telegraph Ave</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ"
@@ -308,11 +360,11 @@
           <!-- Aug 19 -->
           <tr id="aug19">
             <td class="schedule-date">Monday, Aug 19th</td>
-            <td class="schedule-time">6:30 PM</td>
-            <td class="schedule-duration">75 min</td>
+            <td class="schedule-time">5:30 PM</td>
+            <td class="schedule-duration">60 min</td>
             <td class="schedule-class">Green Yogi – Power &amp; Restore</td>
             <td class="schedule-instructor">Lisa Eshun-Wilson</td>
-            <td class="schedule-location">Green Yogi Berkeley</td>
+            <td class="schedule-location">Green Yogi Berkeley | 2807 Telegraph Ave</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?"
