Yoga In Person Updates

--- a/wellness.html
+++ b/wellness.html
@@ -162,31 +162,17 @@ From glowing skin to nourishing meals to becoming financially free, our wellness
     <p class="sub">Each pop-up class is a chance to recharge, sweat, and share space with a supportive community. Show up as you are—every practice is beginner-friendly and a ton of fun!</p>
   </div>
 
-  <div class="cards-row" tabindex="0">
 
-    <!-- Card 1 -->
-    <article class="card">
-      <a class="card-link" href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?">
-        <img class="card-img img-default" src="images/oct18-greenyogi-flyer-default.jpg" alt="Pop Up">
-        <img class="card-img img-hover"   src="images/oct18-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-      </a>
-    </article>
+<nav class="schedule-date-nav" aria-label="Upcoming dates">
+	  <a href="https://www.yogawithlisa.ai/yoga-inperson.html" class="date-pill">Dec 20</a>
+	  <a href="https://www.yogawithlisa.ai/yoga-inperson.html" class="date-pill">Nov 28</a>
+          <a href="https://www.yogawithlisa.ai/yoga-inperson.html" class="date-pill">Nov 21</a>
+          <a href="https://www.yogawithlisa.ai/yoga-inperson.html" class="date-pill">Nov 15</a>
+          <a href="https://www.yogawithlisa.ai/yoga-inperson.html" class="date-pill">Oct 18</a>
+          <a href="https://www.yogawithlisa.ai/yoga-inperson.html" class="date-pill">Sept 19</a>
+          <a href="https://www.yogawithlisa.ai/yoga-inperson.html" class="date-pill">Aug 19</a>
+        </nav>
 
-    <!-- Card 2 -->
-    <article class="card">
-      <a class="card-link" href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ">
-        <img class="card-img img-default" src="images/sept19-greenyogi-flyer-default.jpg" alt="Pop Up">
-        <img class="card-img img-hover"   src="images/sept19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-      </a>
-    </article>
-
-    <!-- Card 3 -->
-    <article class="card">
-      <a class="card-link" href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?">
-        <img class="card-img img-default" src="images/aug19-greenyogi-flyer-default.jpg" alt="Pop Up">
-        <img class="card-img img-hover"   src="images/aug19-greenyogi-flyer-hover.jpg"   alt="" aria-hidden="true">
-      </a>
-    </article>
 </div>
 </section>
 
