--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -232,7 +232,8 @@
           designed to lift your body and your mood. All times are in Pacific Time.
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
-          <a href="#nov15" class="date-pill">Nov 20</a>
+          <a href="#dec20" class="date-pill">Dec 20</a>
+	  <a href="#nov21" class="date-pill">Nov 21</a>
           <a href="#nov15" class="date-pill">Nov 15</a>
           <a href="#oct18" class="date-pill">Oct 18</a>
           <a href="#sept19" class="date-pill">Sept 19</a>
@@ -261,8 +262,8 @@
             <td class="schedule-time">11:00 AM</td>
             <td class="schedule-duration">60 min</td>
             <td class="schedule-class">Vinyasa Flow</td>
-            <td class="schedule-instructor">Lisa Eshun-Wilson</td>
-            <td class="schedule-location">Green Yogi Berkeley | 2807 Telegraph Ave</td>
+            <td class="schedule-instructor">Lisa & Brynn</td>
+            <td class="schedule-location">Green Yogi Berkeley</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://www.mygreenyogi.com/telegraph-schedule"
@@ -278,8 +279,8 @@
             <td class="schedule-time">1:00 PM</td>
             <td class="schedule-duration">60 min</td>
             <td class="schedule-class">Vinyasa Flow</td>
-            <td class="schedule-instructor">Beach Glass Hot Yoga & Pilates Noe Valley | 1461 Church St</td>
-            <td class="schedule-location">Beach Gla</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://www.beachglasshyp.com/schedule"
@@ -295,8 +296,8 @@
             <td class="schedule-time">1:00 PM</td>
             <td class="schedule-duration">60 min</td>
             <td class="schedule-class">Vinyasa Flow</td>
-            <td class="schedule-instructor">Lisa Eshun-Wilson</td>
-            <td class="schedule-location">Beach Glass Hot Yoga & Pilates Noe Valley | 1461 Church St</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Beach Glass Hot Yoga & Pilates</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://www.beachglasshyp.com/schedule"
@@ -312,8 +313,8 @@
             <td class="schedule-time">3:00 PM</td>
             <td class="schedule-duration">60 min</td>
             <td class="schedule-class">Center & Flow</td>
-            <td class="schedule-instructor">Lisa Eshun-Wilson | Brynn Campbell</td>
-            <td class="schedule-location">Berkeley Ballet Theater | 1370 Tenth Street</td>
+            <td class="schedule-instructor">Lisa & Brynn</td>
+            <td class="schedule-location">Berkeley Ballet Theater</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/DHUxfV9lVuVZHBs4idoE"
@@ -329,8 +330,8 @@
             <td class="schedule-time">5:30 PM</td>
             <td class="schedule-duration">60 min</td>
             <td class="schedule-class">Evening Deep Flow</td>
-            <td class="schedule-instructor">Lisa Eshun-Wilson</td>
-            <td class="schedule-location">Green Yogi Berkeley | 2807 Telegraph Ave</td>
+            <td class="schedule-instructor">Lisa & Brynn</td>
+            <td class="schedule-location">Green Yogi Berkeley</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?"
@@ -346,8 +347,8 @@
             <td class="schedule-time">5:30 PM</td>
             <td class="schedule-duration">60 min</td>
             <td class="schedule-class">Sunset Flow</td>
-            <td class="schedule-instructor">Lisa Eshun-Wilson</td>
-            <td class="schedule-location">Green Yogi Berkeley | 2807 Telegraph Ave</td>
+            <td class="schedule-instructor">Lisa & Brynn</td>
+            <td class="schedule-location">Green Yogi Berkeley</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/KKvYNm7SQLW4SXslqEhJ"
@@ -362,9 +363,9 @@
             <td class="schedule-date">Monday, Aug 19th</td>
             <td class="schedule-time">5:30 PM</td>
             <td class="schedule-duration">60 min</td>
-            <td class="schedule-class">Green Yogi – Power &amp; Restore</td>
-            <td class="schedule-instructor">Lisa Eshun-Wilson</td>
-            <td class="schedule-location">Green Yogi Berkeley | 2807 Telegraph Ave</td>
+            <td class="schedule-class">Core Restore</td>
+            <td class="schedule-instructor">Lisa</td>
+            <td class="schedule-location">Green Yogi Berkeley</td>
             <td class="schedule-cta">
               <a class="btn btn-dark btn-pill schedule-btn"
                  href="https://partiful.com/e/TCEOyAKeVyFvav9ayY30?"
