Yoga In Person Description Update

--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -228,8 +228,7 @@
       <header class="schedule-header">
         <h2 class="schedule-title">Find a Class</h2>
         <p class="schedule-subtitle">
-          From sunny vinyasa flows to grounding yin resets, our in-person pop-ups are
-          designed to lift your body and your mood. All times are in Pacific Time.
+          Join us in person to sweat, glow and grow. Designed to lift your body and your mood. All times are in Pacific Time.
         </p>
         <nav class="schedule-date-nav" aria-label="Upcoming dates">
           <a href="#dec20" class="date-pill">Dec 20</a>
